# dynamic_characterization

./: .cruft.json  .gitignore  CHANGES.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python-package-deploy.yml  python-test.yml
binder/: environment.yml
docs/: conf.py  environment.yaml  index.md
docs/_static/: custom.css
docs/content/: contributing.md  prospective.md  usage.md
dynamic_characterization/: __init__.py  classes.py  dynamic_characterization.py
dynamic_characterization/ipcc_ar6/: README.md  __init__.py  agtp.py  radiative_forcing.py
dynamic_characterization/original_temporalis_functions/: README.md  __init__.py  radiative_forcing.py
dynamic_characterization/prospective/: __init__.py  agtp.py  agwp.py  config.py  data_loader.py  radiative_forcing.py
dynamic_characterization/prospective/data/: es5c12391_si_001.xlsx  es5c12391_si_002.xlsx  es5c12391_si_003.xlsx  es5c12391_si_004.xlsx  es5c12391_si_009.xlsx  es5c12391_si_010.xlsx  es5c12391_si_011.xlsx  es5c12391_si_012.xlsx  es5c12391_si_013.xlsx  es5c12391_si_014.xlsx  es5c12391_si_015.xlsx  es5c12391_si_016.xlsx  es5c12391_si_017.xlsx  es5c12391_si_018.xlsx  es5c12391_si_019.xlsx  es5c12391_si_020.xlsx  es5c12391_si_021.xlsx  es5c12391_si_022.xlsx  es5c12391_si_023.xlsx  es5c12391_si_024.xlsx  es5c12391_si_025.xlsx  es5c12391_si_026.xlsx
dynamic_characterization/temporalis/: __init__.py  radiative_forcing.py
dynamic_characterization/timex/: README.md  __init__.py  radiative_forcing.py
examples/: compare_radiative_forcing.py
notebooks/: dynamic_characterization_demo.ipynb  gtp_test.ipynb  prospective_dynamic_lcia_demo.ipynb
tests/: __init__.py  conftest.py  test_characterize_dynamic_inventory.py  test_prospective.py
