[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic_characterization"
authors = [
  { name="Timo Diepers", email="timo.diepers@ltt.rwth-aachen.de" }
]
maintainers = [
  { name="Timo Diepers", email="timo.diepers@ltt.rwth-aachen.de" }
]
description = "Collection of functions for characterizing life cycle inventories with temporal information"
readme = "README.md"
dynamic = ["version"]
# Add here all kinds of additional classifiers as defined under
# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.9"
dependencies = [
    # dependencies as strings with quotes, e.g. "foo"
    # You can add version requirements like "foo>2.0"
    "pandas",
    "numpy",
    "bw2data",
    "loguru",
    "matplotlib>=3.9.4",
]

[project.urls]
source = "https://github.com/brightway-lca/dynamic_characterization"
homepage = "https://github.com/brightway-lca/dynamic_characterization"
tracker = "https://github.com/brightway-lca/dynamic_characterization/issues"

[project.optional-dependencies]
# Getting recursive dependencies to work is a pain, this
# seems to work, at least for now
testing = [
    "pytest",
    "pytest-cov",
    "python-coveralls"
]
dev = [
    "build",
    "pre-commit",
    "pylint",
    "pytest",
    "pytest-cov",
    "pytest-randomly",
    "setuptools",
]

[tool.setuptools]
license-files = ["LICENSE"]
package-dir = { "" = "."}
include-package-data = true
package-data = {dynamic_characterization = ["ipcc_ar6/data/*.json", "ipcc_ar6/data/*.csv"]}
packages = [
    "dynamic_characterization",
    "dynamic_characterization.original_temporalis_functions",
    "dynamic_characterization.ipcc_ar6",
    ]

[tool.setuptools.dynamic]
version = {attr = "dynamic_characterization.__version__"}

[tool.pytest.ini_options]
addopts = "--cov dynamic_characterization --cov-report term-missing --verbose"
norecursedirs = [
    "dist",
    "build",
    ".tox"
]
testpaths = ["tests/*.py"]

[tool.flake8]
# Some sane defaults for the code style checker flake8
max_line_length = 88
extend_ignore = ["E203", "W503"]
# ^  Black-compatible
#    E203 and W503 have edge cases handled by black
exclude = [
    ".tox",
    "build",
    "dist",
    ".eggs",
    "docs/conf.py",
]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[dependency-groups]
demo = [
    "bw-temporalis>=1.2.0",
    "bw2data>=4.5.4",
    "openpyxl>=3.1.5",
    "bw2io>=0.9.14",
    "ipykernel>=6.31.0",
]
